sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:4: error: value getNombreValeurs is not a member of Int
  for (i <- 1 getNombreValeurs()-1) {
              ^AlgInsertionSort:4: error: value - is not a member of Unit
  for (i <- 1 getNombreValeurs()-1) {
                                ^